# claude-palette-tauri

./: .gitignore  README.md  package-lock.json  package.json  preview.html  vite.config.ts
.claude/: CLAUDE.md
src/: App.css  App.tsx  preview-styles.css  preview.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: PreviewModal.tsx
src/layouts/: DockLayout.tsx  FavoritesLayout.tsx  GridLayout.tsx  KanbanLayout.tsx  PaletteLayout.tsx  TabsLayout.tsx  index.ts  types.ts
src/utils/: formatName.ts
