[package]
name = "claude-palette-tauri"
version = "0.1.0"
description = "Claude Palette - A visual palette for Claude Code resources"
authors = ["David Landry <dwlandry@gmail.com>"]
edition = "2021"

[lib]
name = "claude_palette_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2"

